--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 html{
 	font-size: 62.5%;
-	background-image: url(https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NXx8fGVufDB8fHx8&w=1000&q=80);
+	background-image: url(/streetpicresize.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -21,14 +21,15 @@ html{
 
 
 h2{
+	background-color: black;
 	width: 100%;
 	display: block;
 	line-height: 4rem;
-	margin: 121rem;
 	font-size: 1.8rem;
 	text-align: center;
 }
 .magasin_grid{
+	margin-top: 12rem;
 	display: grid;
 	grid-template-columns: repeat(3,1fr);
 
@@ -42,7 +43,7 @@ h2{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	font-size: 1.5rem;
+	font-size: 1.8rem;
 	color: white;
 }
 
@@ -55,7 +56,7 @@ h2{
 	transition: all .3s;
 
 	height: 12rem;
-	background-color: rgba(195, 187, 203, 0.482);
+	background-color: rgba(97, 89, 80, 0.482);
 }
 
 
@@ -65,6 +66,7 @@ h2{
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 header>h1{
+	color: black;
 	font-family: Bebas;
 	width: 100%;
 	font-size: 5rem;
