--- a/style.css
+++ b/style.css
@@ -119,6 +119,8 @@ main>div>input,main>div>label{
 
 
 main>div>input{
+box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+border: .1rem solid #ccc;
 	margin-bottom: 1rem;
 }
 
